--- a/css/sub_layout_org.css
+++ b/css/sub_layout_org.css
@@ -19,7 +19,7 @@
 	bottom: 15px;
 }
 #header_sub .inner > h1 > a {
-	font: bold 24px/1 "arial";
+	font: bold 24px/1 "Quicksand";
 	color: #444;
 }
 
@@ -34,7 +34,7 @@
 #header_sub .inner #gnb li a {
 	display: block;
 	padding: 14px 40px;
-	font: bold 14px/1 "arial";
+	font: bold 14px/1 "Quicksand";
 	color: #777;
 }
 #header_sub .inner #gnb li a:hover {
@@ -52,7 +52,7 @@
 	margin-left: 20px;
 }
 #header_sub .inner .util li a {
-	font: 12px/1 "arial";
+	font: 12px/1 "Quicksand";
 	color: #999;
 }
 
@@ -136,7 +136,7 @@
 	padding-bottom: 30px;
 }
 #header_sub .inner .menuMo h1 a {
-	font: bold 24px/1 "arial";
+	font: bold 24px/1 "Quicksand";
 	color: #fff;
 	text-align: center;
 	display: block;
@@ -150,7 +150,7 @@
 	display: block;
 	padding: 20px 0;
 	border-bottom: 1px solid #444;
-	font: bold 14px/1 "arial";
+	font: bold 14px/1 "Quicksand";
 	color: #888;
 	text-align: center;
 }
@@ -169,7 +169,7 @@
     min-height:500px; 
 }
 .content .inner h1{
-    font:normal 50px/1 'arial'; 
+    font:normal 50px/1 'Quicksand'; 
     color:#000; 
     margin-bottom:50px; 
 }
@@ -196,7 +196,7 @@
 	clear: both;
 }
 #footer_sub .inner h1 {
-	font: bold 24px/1 "arial";
+	font: bold 24px/1 "Quicksand";
 	color: #666;
 	float: left;
 }
@@ -208,13 +208,13 @@
 	margin-left: 20px;
 }
 #footer_sub .inner ul li a {
-	font: bold 14px/1 "arial";
+	font: bold 14px/1 "Quicksand";
 	color: #666;
 }
 #footer_sub .inner address {
 	width: 100%;
 	float: left;
-	font: 14px/1.3 "arial";
+	font: 14px/1.3 "Quicksand";
 	color: #777;
 	margin-bottom: 20px;
 	border-top: 1px solid #888;
@@ -222,7 +222,7 @@
 	margin-top: 20px;
 }
 #footer_sub .inner p {
-	font: 12px/1 "arial";
+	font: 12px/1 "Quicksand";
 	color: #777;
 	width: 100%;
 	float: left;
