--- a/scss/_community.scss
+++ b/scss/_community.scss
@@ -1,10 +1,9 @@
 .community {
-
+  padding:0;
   h2 {
     position: relative;
-    font-size: 30px;
-    margin-bottom: 20px;
-
+    font-size: 3em;
+    margin-bottom: 50px;
     &::after {
       content: '';
       display: block;
@@ -14,54 +13,221 @@
       background-color: $bgColor;
     }
   }
-  .inner {
-    .top_box {
-      background: #f0f8ed;
-      padding: 60px;
-      margin-bottom: 50px;
-      box-sizing: border-box;
-      .pic {
-        width: 80%;
-        height: 350px;
-        img {
-          width: 100%;
-          height: 100%;
-          object-fit: cover;
+  .top_box {
+    background: #f0f8ed;
+    padding: 60px;
+    margin-bottom: 80px;
+    box-sizing: border-box;
+    .pic {
+      width: 80%;
+      height: 500px;
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+    }
+    .text_box {
+      position: absolute;
+      top: 48%;
+      right: 10%;
+      transform: translateY(-50%);
+      height: 300px;
+      width: 500px;
+      background: #fff;
+      box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+      z-index: 1;
+      padding: 40px;
+
+      h1 {
+        position:relative;
+        &::after {
+          content: '';
+          display: block;
+          position: absolute;
+          left:0;
+          width: 40px;
+          height: 2px;
+          background-color: $bgColor;
         }
       }
-      .text_box {
-        position: absolute;
-        top: 48%;
-        left: 50%;
-        transform: translateY(-50%);
-        height: 300px;
-        width: 500px;
-        background: #fff;
-        box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-        z-index: 1;
-        padding: 40px;
+      p {
+        margin-top:50px;
+      }
+    }
+  }
+  .inner {
+    
+    .journal_list {
+      ul{
+      &:after {
+        content:'';
+        display: block;
+        clear:both;
+      }
+      li {
+        float:left;
+        width:25%;
+        height:500px;
+        background:#111;
+        
+        box-sizing: border-box;
 
-        h1 {
+        &:nth-of-type(1){background:#c0bea8;}
+        &:nth-of-type(2){background: none;}
+        &:nth-of-type(3){background: #fe460c;}
+        &:nth-of-type(4){background: #857f97;}
+        &:nth-of-type(5){background: #d1ff72;}
+        &:nth-of-type(6){background: #9a3030;}
+        &:nth-of-type(7){background: none;}
+        &:nth-of-type(8){background: none;}
+        &:nth-of-type(9){background: #d8dfd7;}
+        &:nth-of-type(10){background: none;}
+        &:nth-of-type(11){background: #37abfa;}
+        &:nth-of-type(12){background: #f0cdd9;}
+        a {
           position:relative;
-          &::after {
-            content: '';
-            display: block;
-            position: absolute;
-            left:0;
-            width: 40px;
-            height: 2px;
-            background-color: $bgColor;
+          .pic {
+            z-index: 1;
+            width:100%;
+            position:absolute;left:0;right: 0;
+            top: 0;
+            bottom: 0;
+            img {
+              width:100%;
+              height: 100%;
+              object-fit: cover;
+            }
+          }
+
+          .text_box {
+           
+            height:100%;
+            position: relative;
+            h3 {
+              position: absolute;
+              top:20px;
+              left:50%;
+              transform: translateX(-50%);
+            }
+            p {
+              position: absolute;
+              bottom:20px;
+              left:50%;
+              transform: translateX(-50%);
+            }
+          }
+        }
+      }
+      }
+    }
+
+    .faq {
+      padding:80px 50px;
+      background:$bgColor02;
+      ul {
+        background:#f3eee5;
+        padding:30px 50px;
+        &::after {
+          content:'';
+          display: block;
+          clear: both;
+        }
+        li {
+          margin-top:30px;
+          width:70%;
+          float:right;
+          .question {
+            cursor: pointer;
+            &:after {
+              content:'';
+              display: block;
+              clear: both;
+            }
+
+           span {
+              float:left;
+              font-size: 40px;
+            }
+            p {
+              position:relative;
+              font-size: 35px;
+              float:right;
+              &:after {
+                content:'';
+                position:absolute;
+                width: 100%;
+                height: 1px;
+                background: #111;
+                bottom:0;
+                right: 0;;
+              }
+            }
+          }
+          .answer {
+           // display: none;
+           margin-top:10px;
+           float:right;width:60%;
           }
         }
       }
     }
+    .sns {
+      padding:80px 50px ;
+      background:$bgColor02;
+      ul {
+        margin:0 -10px;
+        &::after {
+          content:'';
+          display: block;
+          clear: both;
+        }
+        li {
+          float:left;
+          width:calc(25% - 10px);
+          margin:0 5px;
+          text-align: center;
+          .pic {
+            
+            width:100%;
+            height:200px;
+            margin: 0 auto;
+            img {
+              width:100%;
+              height:200px;
+              object-fit: cover;
+            }
+          }
+          span {
+            background:#fff;
+            display: inline-block;
+            width:50%;
+            position:relative;
+            top:-10px;
+            padding:5px 0;
+            box-shadow: rgba(0, 0, 0, 0.04) 0px 3px 5px;
+          }
+          
+        }
+      }
+    }
 
+    .table{
+      padding:80px 50px 50px;
+      background: $bgColor02;
     table {
       width: 100%;
       border-bottom: 2px solid $bgColor;
       margin-bottom: 50px;
-
+      thead {
+        tr {
+          &:first-child:hover {
+            background:none;
+          }
+        }
+      }
       tr {
+      
         &:hover {
           background: #f77e34;
           color: #fff;
@@ -73,7 +239,7 @@
 
         th {
           padding: 15px;
-          background: #fff;
+          
           color: #111;
           border-bottom: 1px solid #111;
 
@@ -92,7 +258,7 @@
 
         td {
           padding: 13px;
-          border-bottom: 1px solid #ddd;
+        
           text-align: center;
 
           &:nth-of-type(2) {
@@ -105,7 +271,7 @@
 
           a {
             color: #333;
-            font-family: 'arial';
+            font-family: 'Quicksand';
             line-height: 1.4;
 
           }
@@ -161,13 +327,17 @@
 
         a {
           display: inline-block;
-          width: 30px;
-          height: 30px;
+          width: 50px;
+          height: 50px;
+       
+          
+          border-radius: 50%;
 
-          font: 11px/30px 'arial';
+          font: 11px/50px 'Quicksand';
           color: #666;
-          margin: 0 0;
+          margin:0 2px;
           transition: 0.5s;
+         
 
           &:hover {
             background: $bgColor;
@@ -184,6 +354,7 @@
       }
     }
   }
+  }
 }
 
 /*tablet ----------------------------------------*/
@@ -192,7 +363,6 @@
     .inner {
       h1 {
         font-size: 40px;
-
         span {
           display: block;
           margin-top: 10px;
@@ -202,29 +372,37 @@
           }
         }
       }
-
-      .top_box {
-        padding: 30px;
-
-        .pic {
-          width: 100%;
-          height: 250px;
-        }
-        .text_box {
-          position: relative;
-          top: auto;
-          left: 0%;
-          transform: translateY(0%);
-          height: 35%;
-          width: 100%;
-          background: #fff;
-          box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-          z-index: 1;
-          padding: 20px;
-
+      .journal_list{
+        ul {
+          li {
+            width:33.3333%;
+          }
         }
       }
-
+      .faq{
+        ul{
+          li{
+            width:100%;
+            .question{
+              p{
+              &:after {
+                width:100%;
+              }
+            }
+            }
+            
+          }
+        }
+      }
+      .sns{
+        ul{
+          li{
+            .pic {
+              width:100%;
+            }
+          }
+        }
+      }
       table {
         tr {
           th {
@@ -274,26 +452,117 @@
     }
   }
 }
+@media screen and (max-width:$mini) {
+  .community {
+    .top_box{
+      padding:30px;
+      .pic {
+        width: 100%;
+      }
+      .text_box {
+        width:100%;
+        height:auto;
+        right: 0;
+        top:50%;
+        transform: none;
+        p {
+          margin-top: 20px;
+        }
+      }
+    }
+    .inner{
+      .journal_list{
+        ul {
+          li {
+            width:50%;
+          }
+        }
+      }
+      .faq{
+        padding:50px 30px;
+        ul{
+          li{
+            .answer{
+              width:100%;
+            }
+          }
+        }
+      }
+      .sns {
+        ul{
+          li{
+            width:calc(50% - 10px)
+          }
+        }
+      }
+    }
+  }
+}
 
 /*mobile ------------------------------------------*/
 @media screen and (max-width:$mobile) {
   .community {
-    .inner {
-      .top_box {
-        padding: 0;
-        .pic {
-          height: 250px;
+    .top_box {
+      padding: 0;
+     position: relative;
+      .pic {
+        height: 250px;
+      }
+      .text_box {
+        padding:20px 30px;
+        top:auto;
+        bottom:-100px;
+        h1 {
+          margin-bottom: 20px;
+          font-size: 25px;
         }
-        .text_box {
-          h1 {
-            margin-bottom: 20px;
-            font-size: 25px;
-          }
-          p{
-            font-size: 14px;
+        p{
+          font-size: 14px;
+        }
+      }
+    }
+    .inner {
+      margin-top:150px;
+      .journal_list{
+        ul {
+          li {
+            height:300px;
+            width:100%;
           }
         }
       }
+      .faq{
+        ul{
+          padding:15px;
+          li{
+            .question{
+              span{
+                font-size: 25px;
+              }
+              p {
+                font-size: 20px;
+              }
+            }
+            .answer{
+              p{
+                font-size: 14px;
+              }
+            }
+          }
+        }
+      }
+      .sns {
+        padding:30px 30px;
+        ul{
+          margin:0;
+          li{
+            width:100%;
+            margin:0 0 10px;
+          }
+        }
+      }
+      .table{
+        padding:30px;
       table {
         tr {
           th {
@@ -324,4 +593,7 @@
       }
     }
   }
+  }
 }
+
+
