--- a/scss/_join.scss
+++ b/scss/_join.scss
@@ -1,123 +1,286 @@
-.join {
-  height: calc(100vh - 121px);
-
+#header_sub.join_header {
+  border-bottom: 0;
   .inner {
-    height: 100%;
+    height: 80px;
+    text-align: center;
 
-    &:after {
-      content: '';
+    h1 {
+      position: relative;
+      bottom: auto;
+      a {
+        line-height: 80px;
+      }
+    }
+  }
+}
+.join {
+  padding: 0;
+  
+  .main {
+    height: 500px;
+    width: 100%;
+    background: url(../img/big/4.jpg) no-repeat center/cover;
+    text-align: center;
+
+    h2 {
+      margin-top: 150px;
+      text-align: center;
+      background: #fff;
+      display: inline-block;
+      text-align: center;
+      padding: 20px;
+    }
+
+    p {
+      position:relative;
+      font-weight: bold;
+      font-size: 18px;
+      margin-top: 50px;
+      background: #fff;
+      display: block;
+      
+      width: 200px;
+      margin: 50px auto 0;
+   
+    }
+    a {
+      padding: 20px;
+      display: block;
+      width:100%;height:100%;
+    
+    }
+
+  }
+
+  .join_list {
+    padding: 50px 30px 50px;
+    text-align: center;
+    background: #f4e1ce;
+
+    &::after {
+      content: "";
       display: block;
       clear: both;
     }
 
-    .left {
-      height: 100%;
-      width: 50%;
+    li {
+      position: relative;
+      text-align: center;
+      float: left;
+      width: 25%;
+      padding: 0 20px;
 
-      img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
+      &:after {
+        content: '';
+        display: block;
+        position: absolute;
+        right: 0;
+        top: 50%;
+        transform: translateY(-50%);
+        background: #111;
+        height: 50%;
+        width: 1px;
       }
-    }
 
-    .right {
-      float: right;
-      width: 50%;
-      height: 100%;
-      padding: 50px;
-      box-sizing: border-box;
-
-      h1 {
-        margin-bottom: 30px;
-
-        &::after {
-          width: 30px;
+      h3 {
+        font-size: 30px;
+        position: relative;
+        display: inline-block;
+     
+        &:after {
+          content:'';
+          display: block;
+          position: absolute;
+          bottom:7px;
+          left:0%;
+          
+          width:100%;
+          height:5px;
+          background:#e8ae94;
+  
+        }
+        span {
+          position:relative;
+          z-index: 1;
+          width:auto;
+          color:#111;
         }
       }
 
-      table {
-        width: 100%;
+      p {
+       
+        font-weight: bold;
+        margin: 10px 0 20px;
+        font-size: 20px;
+        height: 50px;
+        color: #111;
+      
+      }
 
-        th {
-          display: block;
+      span {
+        color: #aaa;
+        width: 50%;
+        display: block;
+        margin: auto;
+      }
+
+      &:last-child {
+        margin-right: 0;
+
+        &:after {
+          content: none;
+        }
+      }
+    }
+  }
+
+  .inner {
+    width: 100%;
+    padding: 80px 0;
+    background: #f1f1f1;
+
+    .cont {
+      padding: 0;
+      width: 1180px;
+      margin: 0 auto;
+      box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+      height: 800px;
+
+      &:after {
+        content: '';
+        display: block;
+        clear: both;
+      }
+
+      .left {
+        height: 100%;
+        width: 50%;
+
+        img {
           width: 100%;
-          text-align: left;
-          padding: 0;
-          font: bold 14px/1 'arial';
-          color: #666;
+          height: 100%;
+          object-fit: cover;
+        }
+      }
 
-          &:last-child {
-            border: none;
-            text-align: center;
-            background: #fff;
-            font-size: 0;
+      .right {
+        background: #fff;
+        float: right;
+        width: 50%;
+        height: 100%;
+        padding: 50px;
+        box-sizing: border-box;
+
+        h1 {
+          margin-bottom: 30px;
+
+          &::after {
+            width: 30px;
           }
+        }
 
-          input[type=submit] {
-            width: 150px;
-            height: 40px;
-            border: 1px solid #000;
-            background: none;
-            font: bold 14px/1 'arial';
-            color: #111;
-            margin: 0 10px;
-            transition: 0.5s;
-            cursor: pointer;
-            outline: 0;
+        table {
+          width: 100%;
 
-            &:hover {
-              color: #fff;
-              border: $bgColor;
-              background: $bgColor;
+          th {
+            display: block;
+            width: 100%;
+            text-align: left;
+            padding: 0;
+            font: bold 14px/1 'Quicksand';
+            color: #666;
+
+            &:last-child {
+              border: none;
+              text-align: center;
+              background: #fff;
+              font-size: 0;
+            }
+
+            input[type=submit] {
+              width: 150px;
+              height: 40px;
+              border: 1px solid #000;
+              background: none;
+              font: bold 14px/1 'Quicksand';
+              color: #111;
+              margin: 0 10px;
+              transition: 0.5s;
+              cursor: pointer;
+              outline: 0;
+
+              &:hover {
+                color: #fff;
+                border: $bgColor;
+                background: $bgColor;
+              }
             }
           }
-        }
 
-        td {
-          display: block;
-          width: 100%;
-          border-bottom: 1px solid #bbb;
-          padding: 10px 0;
-          margin-bottom: 40px;
-
-          input[type=text],
-          input[type=password],
-          select {
+          td {
+            display: block;
             width: 100%;
-            height: 30px;
-            border: none;
-            padding: 0 5px;
-          }
+            border-bottom: 1px solid #bbb;
+            padding: 10px 0;
+            margin-bottom: 40px;
 
-          label {
-            margin-right: 10px;
-          }
+            input[type=text],
+            input[type=password],
+            select {
+              width: 100%;
+              height: 30px;
+              border: none;
+              padding: 0 5px;
+            }
 
-          .radio,
-          .checks {
-            display: inline-block;
-          }
+            label {
+              margin-right: 10px;
+            }
 
-          .hobbyTxt,
-          .genderTxt {
-            font: 12px/1 'arial';
-            color: hotpink;
-            margin-bottom: 5px;
-            display: none;
-          }
+            .radio,
+            .checks {
+              display: inline-block;
+            }
 
+            .hobbyTxt,
+            .genderTxt {
+              font: 12px/1 'Quicksand';
+              color: hotpink;
+              margin-bottom: 5px;
+              display: none;
+            }
+
+          }
         }
       }
-    }
 
+    }
+  }
+
+  .text_box {
+    padding: 50px 0 50px;
+    background: #f4e1ce;
+
+    div {
+      max-width: 1180px;
+      margin: 0 auto;
+
+      p {
+        margin-top: 10px;
+      }
+    }
   }
 }
+
 
 /*tablet ------------------------------------------------------*/
 @media screen and (max-width:$tablet) {
   .join {
     .inner {
+      padding:50px 30px;
+      .cont{
+        width:100%;
+     
       .left {
         width: 50%;
 
@@ -153,7 +316,7 @@
             width: 100%;
             text-align: left;
             padding: 0;
-            font: bold 14px/1 'arial';
+            font: bold 14px/1 'Quicksand';
             color: #666;
 
             &:last-child {
@@ -174,84 +337,118 @@
     }
   }
 }
-
+}
 /*tablet*/
 
-/*mobile --------------------------------------------------------*/
-@media screen and (max-width:$mobile) {
+@media screen and (max-width:900px) {
   .join {
-    height: auto;
-    padding-bottom: 0;
+    .join_list {
+      padding: 40px 15px;
 
-    .inner {
-      position: relative;
-      padding: 70px 30px;
-
-      .left {
+      li {
+        float: none;
         width: 100%;
-        position: absolute;
-        left: 0;
-        top: 0;
-        bottom: 0;
-        right: 0;
-      }
+        padding: 0 20px 20px;
+        margin-bottom: 20px;
 
-      .right {
-        position: relative;
-        z-index: 1;
-        float: right;
-        width: 100%;
-        height: auto;
-        padding: 30px 10px;
-        box-sizing: border-box;
-        background: rgba(0, 0, 0, 0.5);
-
-        h1 {
-          margin-bottom: 30px;
-          font-size: 30px;
-          color: #fff;
+        &:after {
+          right: auto;
+          top: auto;
+          bottom: 0;
+          left: 50%;
+          margin-left: -5%;
+          height: 1px;
+          width: 10%;
         }
 
-        table {
-          width: 100%;
-
-          th {
-            color: #fff;
-
-            &:last-child {
-              background: none;
-            }
-
-            input[type=submit] {
-              color: #fff;
-              border: 1px solid #fff;
-            }
-          }
-
-          td {
-            display: block;
-            width: 100%;
-            border-bottom: 1px solid #bbb;
-            padding: 10px 0;
-            margin-bottom: 20px;
-
-            input[type=text],
-            input[type=password],
-            select {
-              width: 100%;
-              height: 30px;
-              border: none;
-              padding: 5px;
-            }
-
-            label {
-              margin-right: 0;
-              color: #fff
-            }
-          }
-        }
       }
-
     }
   }
 }
+  /*mobile --------------------------------------------------------*/
+  @media screen and (max-width:$mobile) {
+    .join {
+      height: auto;
+      padding-bottom: 0;
+
+      .inner {
+        padding:50px 0;
+        .cont{
+          width:100%;
+        position: relative;
+        padding: 70px 30px;
+        height:auto;
+
+        .left {
+          width: 100%;
+          position: absolute;
+          left: 0;
+          top: 0;
+          bottom: 0;
+          right: 0;
+        }
+
+        .right {
+          position: relative;
+          z-index: 1;
+          float: right;
+          width: 100%;
+          height: auto;
+          padding: 30px 10px;
+          box-sizing: border-box;
+          background: rgba(0, 0, 0, 0.5);
+
+          h1 {
+            margin-bottom: 30px;
+            font-size: 30px;
+            color: #fff;
+          }
+
+          table {
+            width: 100%;
+
+            th {
+              color: #fff;
+
+              &:last-child {
+                background: none;
+              }
+
+              input[type=submit] {
+                color: #fff;
+                border: 1px solid #fff;
+              }
+            }
+
+            td {
+              display: block;
+              width: 100%;
+              border-bottom: 1px solid #bbb;
+              padding: 10px 0;
+              margin-bottom: 20px;
+
+              input[type=text],
+              input[type=password],
+              select {
+                width: 100%;
+                height: 30px;
+                border: none;
+                padding: 5px;
+              }
+
+              label {
+                margin-right: 0;
+                color: #fff
+              }
+            }
+          }
+        }
+      }
+      }
+      .text_box {
+        padding:30px;
+      }
+    }
+  }
+
+
