--- a/scss/_reset.scss
+++ b/scss/_reset.scss
@@ -8,8 +8,17 @@ fieldset{ border:none; }
 .left {float:left}
 .right {float: right;}
 
+body {
+  font-family: 'Quicksand', sans-serif;
+}
 
+h1 {
+  font-family: 'Josefin Sans', sans-serif ;
+}
 
+html {
+  scroll-behavior:smooth;
+}
 
 /*input*/
 input[type=text]:focus, 
@@ -23,8 +32,8 @@ input[type=text]:focus,
 .radio {position: relative;}
 .radio input[type="radio"] { position: absolute; width: 1px; height: 1px; padding: 0; margin: -1px; overflow: hidden; clip:rect(0,0,0,0); border: 0; }
 .radio input[type="radio"] + label { display: inline-block; position: relative; padding-left: 30px; cursor: pointer; -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; }
-.radio input[type="radio"] + label:before { content: ''; position: absolute; left: 0; top: -1px; width: 15px; height: 15px; text-align: center; background: #fafafa; border: 1px solid #cacece; border-radius: 100%; box-shadow: 0px 1px 2px rgba(0,0,0,0.05), inset 0px -15px 10px -12px rgba(0,0,0,0.05); }
-.radio input[type="radio"]:checked + label:after { content: ''; position: absolute; top: 3px; left: 4px; width: 9px; height: 9px; background:  $pointColor; border-radius: 100%; }
+.radio input[type="radio"] + label:before { content: ''; position: absolute; left: 0; top: 1px; width: 15px; height: 15px; text-align: center; background: #fafafa; border: 1px solid #cacece; border-radius: 100%; box-shadow: 0px 1px 2px rgba(0,0,0,0.05), inset 0px -15px 10px -12px rgba(0,0,0,0.05); }
+.radio input[type="radio"]:checked + label:after { content: ''; position: absolute; top: 5px; left: 4px; width: 9px; height: 9px; background:  $pointColor; border-radius: 100%; }
 
 /*checkbox*/
 .checks {position:relative;}
