--- a/scss/_sub_layout.scss
+++ b/scss/_sub_layout.scss
@@ -1,25 +1,24 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400&family=Oswald&family=Parisienne&family=Poiret+One&display=swap');
+
 /*sub layout ----------------------------------------------*/
 /*heder_sub----------------------------------------------*/
 #header_sub {
 	width: 100%;
 	border-bottom: 1px solid #ddd;
-
 	.inner {
 		width: 1180px;
-		height: 120px;
+		height: 80px;
 		margin: 0 auto;
 		position: relative;
-
 		> h1 {
 			position: absolute;
 			left: 0;
 			bottom: 15px;
 			
 			> a {
-				font: bold 24px/1 "Oswald";
+				font: bold 40px/1 "Oswald";
 				color: #444;
 				color:$pointColor;
+				letter-spacing: 5px;
 			}
 		}
 		// gnb
@@ -34,7 +33,7 @@
 				a {
 					display: block;
 					padding: 14px 40px;
-					font: bold 14px/1 "arial";
+					font: bold 14px/1 "Quicksand";
 					color: #777;
 				
 
@@ -57,7 +56,7 @@
 				margin-left: 20px;
 
 				a {
-					font: 12px/1 "arial";
+					font: 12px/1 "Quicksand";
 					color: #999;
 				}
 			}
@@ -148,7 +147,7 @@
 
 				a {
 					display: block;
-					font: bold 24px/1 "arial";
+					font: bold 24px/1 "Quicksand";
 					color: #fff;
 					text-align: center;
 				}
@@ -163,7 +162,7 @@
 					display: block;
 					padding: 20px 0;
 					border-bottom: 1px solid #444;
-					font: bold 14px/1 "arial";
+					font: bold 14px/1 "Quicksand";
 					color: #888;
 					text-align: center;
 				}
@@ -191,7 +190,7 @@
 
         h1{
 						position:relative;
-            font:normal 50px/1 'arial'; 
+            font:normal 50px/1 'Quicksand'; 
             color:#000; 
             margin-bottom:50px; 
 						transition:0.5s; 
@@ -225,7 +224,7 @@
 /*footer sub---------------------------------------*/
 #footer_sub {
 	width: 100%;
-	padding: 100px 0;
+	padding: 50px 0;
 	background: #444;
 
 	.inner {
@@ -240,7 +239,7 @@
 
 		h1 {
 			float: left;
-			font: bold 24px/1 "arial";
+			font: bold 24px/1 "Quicksand";
 			color: #666;
 		}
 		ul {
@@ -251,7 +250,7 @@
 				margin-left: 20px;
 
 				a {
-					font: bold 14px/1 "arial";
+					font: bold 14px/1 "Quicksand";
 					color: #666;
 				}
 			}
@@ -259,7 +258,7 @@
 		address {
 			float: left;
 			width: 100%;
-			font: 14px/1.3 "arial";
+			font: 14px/1.3 "Quicksand";
 			color: #777;
 			border-top: 1px solid #888;
 			margin-top: 20px;
@@ -269,7 +268,7 @@
 		p {
 			float: left;
 			width: 100%;
-			font: 12px/1 "arial";
+			font: 12px/1 "Quicksand";
 			color: #777;
 		}
 	}
